--- a/package.json
+++ b/package.json
@@ -7,10 +7,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "firebase": "^8.4.2",
+    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.1.3",
-    "react-scripts": "4.0.3"
+    "react-redux-firebase": "^3.10.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-firestore": "^0.15.0"
   },
   "scripts": {
     "start": "react-scripts start",
